--- a/package.json
+++ b/package.json
@@ -8,7 +8,12 @@
     "start": "next start"
   },
   "dependencies": {
+    "eslint": "^7.4.0",
+    "gray-matter": "^4.0.2",
+    "marked": "^1.1.1",
     "next": "9.4.4",
+    "prettier": "^2.0.5",
+    "prism-react-renderer": "^1.1.1",
     "react": "16.13.1",
     "react-dom": "16.13.1"
   }
