--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "prettier": "^2.0.5",
     "prism-react-renderer": "^1.1.1",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "swr": "^0.2.3"
   }
 }
