--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -22,4 +22,4 @@ jobs:
           aws-secret-access-key: ${{ secrets.AWS_SECRET_ACCESS_KEY }}
           aws-region: eu-west-3
       - name: Copy files to the production website with the AWS CLI
-        run: aws s3 sync ./out s3://blog-next-christophe-parmentier
+        run: aws s3 sync ./out s3://christophe-parmentier.fr
