--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "eslint": "^7.4.0",
     "gray-matter": "^4.0.2",
+    "katex": "^0.12.0",
     "marked": "^1.1.1",
     "next": "10.0.1",
     "prettier": "^2.0.5",
